--- a/sportsio/templates/admin_side/base.html
+++ b/sportsio/templates/admin_side/base.html
@@ -92,6 +92,14 @@
                 <span class="hide-menu">Order Management</span>
               </a>
             </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="{% url 'coupon_management' %}" aria-expanded="false">
+                <span>
+                  <i class="ti ti-typography"></i>
+                </span>
+                <span class="hide-menu">Coupon Management</span>
+              </a>
+            </li>
             <li class="nav-small-cap">
               <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
               <span class="hide-menu">AUTH</span>
