--- a/sportsio/templates/user_side/cart_view.html
+++ b/sportsio/templates/user_side/cart_view.html
@@ -23,8 +23,6 @@
         </div>
         <!-- Uren's Breadcrumb Area End Here -->
         <!-- Begin Uren's Cart Area -->
-        <form action="{% url 'user_profile:order_checkout'%}" method="post">
-            {% csrf_token %}
             <div class="uren-cart-area">
                 <div class="container-fluid">
                     <div class="row">
@@ -36,8 +34,9 @@
                                             <th class="uren-product-remove">remove</th>
                                             <th class="uren-product-thumbnail">images</th>
                                             <th class="cart-product-name">Product</th>
-                                            <th class="uren-product-price li-product-price">Unit Price</th>
+                                            <th class="uren-product-price">Unit Price</th>
                                             <th class="uren-product-quantity">Quantity</th>
+                                            <th > Product Subtotal</th>
                                                 
                                             
                                         </tr>
@@ -57,7 +56,7 @@
                                             </td>
                                             
                                             <td class="uren-product-name"><a href="javascript:void(0)">{{ items.product }}</a></td>
-                                            <td class="uren-product-price"><span class="amount">₹ {{ items.product.offer_price }}</span></td>
+                                            <td class="uren-product-price"><span class="amount li-product-price">₹ {{ items.product.offer_price }}</span></td>
                                             <td class="quantity tr">
                                                 {% if items.product_id.stock_count <= 0 %}
                                                 <span class="h6" style="color:red; ">OUT OF STOCK</span>
@@ -75,135 +74,154 @@
                                         </div>
                                             {% endif %}
                                             </td>
+                                            <td class="product-subtotal"><span class="amount">₹{{ item.total_price }}</span></td>
                                         </tr>
                                         {% endfor %}
                                         <!-- Display total_price outside of the loop -->
-                                        <td style="justify-content:center;" class="product-subtotal"><span class="amount">Total Price: ₹ {{ items.total_price }}</span></td>
                                     </tbody>
                                 </table>
                             </div>
                         </div>
                     </div>
-                
-            
-      
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="coupon-all">
+                                <form method="POST" action="{% url 'user_profile:cart_view'%}">
+                                    {% csrf_token %}
+                                <div class="coupon">
+                                    <input id="coupon_code" class="input-text" name="coupon_code" value="" placeholder="Coupon code" type="text">
+                                    <input class="button" name="apply_coupon" value="Apply coupon" type="submit">
+                                </div>
+                            </form>
+                            </div>
+                        </div>
+                    </div>
                             <div class="row">
                                 <div class="col-md-5 ml-auto">
                                     <div class="cart-page-total">
                                         <h2>Cart totals</h2>
                                         <ul>
-                                            <li>Subtotal <span class="li-product-price product-subtotal amount">₹ {{ total_price }}</span></li>
-                                            <li>Total <span>₹ {{ total_price }}</span></li>
+                                            <li>Subtotal <span id="subtotal">₹{{ subtotal }}</span></li>   
+                                            <li>Delivery <span>₹50</span></li>                                         <li>Total 
+                                                 <span id="total">₹{{ subtotal }}</span>
+                                                
+                                            </li>
+
                                         </ul>
-                                        <button type="submit">Proceed to checkout</button>
+                                        <button ><a href="{% url 'user_profile:order_checkout' %}">Proceed to checkout</a></button>
                                        
                                     </div>
                                 </div>
                             </div>
-                        </form>
                     </div>
                 </div>
           
         
-                <script>
-                    $(document).ready(function(){
-                        // Function to update cart item totals
-                        function updateCartItem(row) {
-                            var quantity = parseInt(row.find('.qty-input').val());
-                            var price = parseFloat(row.find('.li-product-price').text().replace('₹', ''));
-                            var subtotal = quantity * price;
-                            row.find('.product-subtotal .amount').text('₹' + subtotal.toFixed(2));
-                            updateCartTotals();
-                            
-                            // Send AJAX request to update cart quantity
-                            var product_id = row.find('.prod_id').val();
-                            var quantity = quantity;
-                            $.ajax({
-                                url: "{% url 'user_profile:update_cart_quantity'%}",
-                                method: 'POST',
-                                data: {
-                                    'product_id': product_id,
-                                    'quantity': quantity,
-                                    'csrfmiddlewaretoken': '{{ csrf_token }}' // Ensure to include CSRF token
-                                },
-                                success: function(response) {
-                                    // Handle success response if needed
-                                    console.log(response);
-                                },
-                                error: function(xhr, errmsg, err) {
-                                    // Handle error response if needed
-                                   // console.log(xhr.status + ": " + xhr.responseText);
-                                   console.log('some error occured')
-                                }
-                            });
-                        }
-                    
-                        // Function to update cart totals
-                        function updateCartTotals() {
-                            var subtotal = 0;
-                            $('.product-subtotal .amount').each(function() {
-                                subtotal += parseFloat($(this).text().replace('₹', ''));
-                            });
-                            $('#subtotal').text('₹' + subtotal.toFixed(2));
-                            var total = subtotal + 50; // Assuming delivery charge is ₹50
-                            $('#total').text('₹' + total.toFixed(2));
-                        }
-                    
-                        // Initial calculation of cart totals when the page loads
-                        updateCartTotals();
-                    
-                        // Plus button click event
-                        $('.plus-btn').click(function() {
-                            console.log('Plus button clicked');
-                            var input = $(this).parent().prev('input.qty-input');
-                            var currentVal = parseInt(input.val());
-                            var stockCount = parseInt(input.attr('max'));
+                <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- Your existing HTML content -->
 
-                            console.log('Current value:', currentVal);
-                            console.log('Max stock count:', stockCount);
-                            if (!isNaN(currentVal) && currentVal < stockCount) {
-                                input.val(currentVal + 1).change();
-                                updateCartItem($(this).closest('tr'));
-                                console.log('Quantity increased');
-                            } else {
-                                console.log('Reached maximum stock count')
-                                toastr.warning("Reached maximum stock count");;
-                                
-                            }
-                        });
-                    
-                        // Minus button click event
-                        $('.minus-btn').click(function() {
-                            var input = $(this).parent().next('input.qty-input');
-                            var currentVal = parseInt(input.val());
-                            if (!isNaN(currentVal) && currentVal > 1) {
-                                input.val(currentVal - 1).change();
-                                updateCartItem($(this).closest('tr'));
-                            }
-                        });
-                    
-                        // Quantity input change event
-                        $('.qty-input').change(function() {
-                            var input = $(this);
-                            var newVal = parseInt(input.val());
-                            var stockCount = parseInt(input.attr('max'));
-                            if (!isNaN(newVal) && newVal > stockCount) {
-                                input.val(stockCount);
-                            }
-                            updateCartItem($(this).closest('tr'));
-                        });
-                    });
-                    
-                    </script>
-                    <script>
-                        function removeItem(event, itemId) {
-                            event.preventDefault(); // Prevent the default action of following the link
-                            // Perform the removal by redirecting to the remove_cart view
-                            window.location.href = "{% url 'user_profile:remove_cart' 0 %}".replace('0', itemId);
-                            // Show a success Toastr notification
-                            toastr.success("Item removed successfully");
-                        }
-                    </script>
+</script>                  
+{% if messages %}
+<script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+        toastr.options = { "closeButton": false, "debug": false, "newestOnTop": true,
+            "progressBar": true, "positionClass": "toast-top-right", "preventDuplicates": true,
+            "onclick": null, "showDuration": "300", "hideDuration": "1000", "timeOut": "5000",
+            "extendedTimeOut": "1000", "showEasing": "swing", "hideEasing": "linear",
+            "showMethod": "fadeIn", "hideMethod": "fadeOut" };
+        {% autoescape on %}
+            {% for msg in messages %}
+                toastr.{{ msg.level_tag }}("{{ msg }}");
+            {% endfor %}
+        {% endautoescape %}
+    });
+</script>
+{%endif%}
+
+
+
+<script>
+    $(document).ready(function(){
+        // Function to update cart item totals
+        function updateCartItem(row) {
+            var quantity = parseInt(row.find('.qty-input').val());
+            var price = parseFloat(row.find('.li-product-price').text().replace('₹', ''));
+            var subtotal = quantity * price;
+            row.find('.product-subtotal .amount').text('₹' + subtotal.toFixed(2));
+            updateCartTotals();
+            
+            // Send AJAX request to update cart quantity
+            var product_id = row.find('.prod_id').val();
+            var quantity = quantity;
+            $.ajax({
+                url: "{% url 'user_profile:update_cart_quantity'%}",
+                method: 'POST',
+                data: {
+                    'product_id': product_id,
+                    'quantity': quantity,
+                    'csrfmiddlewaretoken': '{{ csrf_token }}'
+                },
+                success: function(response) {
+                    console.log(response);
+                },
+                error: function(xhr, errmsg, err) {
+                    console.log('some error occured')
+                }
+            });
+        }
+        
+        function updateCartTotals() {
+            var subtotal = 0; // Initialize subtotal to 0
+            $('.product-subtotal .amount').each(function() {
+                // Extract the numeric part of the text content and add it to the subtotal
+                subtotal += parseFloat($(this).text().replace('₹', '').trim()); // Trim removes any whitespace around the number
+            });
+            $('#subtotal').text('₹' + subtotal.toFixed(2));
+        
+            // Assuming a fixed delivery charge of ₹50
+            var deliveryCharge = 50; // Convert to float if necessary
+            var total = subtotal + deliveryCharge; // Add the delivery charge to the subtotal
+            $('#total').text('₹' + total.toFixed(2));
+        }
+        
+        // Initial calculation of cart totals when the page loads
+        updateCartTotals();
+    
+        // Plus button click event
+        $('.plus-btn').click(function() {
+            var input = $(this).parent().prev('input.qty-input');
+            var currentVal = parseInt(input.val());
+            var stockCount = parseInt(input.attr('max'));
+            if (!isNaN(currentVal) && currentVal < stockCount) {
+                input.val(currentVal + 1).change();
+                updateCartItem($(this).closest('tr'));
+            } else {
+                toastr.warning("Reached maximum stock count");
+            }
+        });
+        
+        // Minus button click event
+        $('.minus-btn').click(function() {
+            var input = $(this).parent().next('input.qty-input');
+            var currentVal = parseInt(input.val());
+            if (!isNaN(currentVal) && currentVal > 1) {
+                input.val(currentVal - 1).change();
+                updateCartItem($(this).closest('tr'));
+            }
+        });
+        
+        // Quantity input change event
+        $('.qty-input').change(function() {
+            var input = $(this);
+            var newVal = parseInt(input.val());
+            var stockCount = parseInt(input.attr('max'));
+            if (!isNaN(newVal) && newVal > stockCount) {
+                input.val(stockCount);
+            }
+            updateCartItem($(this).closest('tr'));
+        });
+    });
+    </script>
                     
         <!-- Uren's Cart Area End Here -->
         {% endblock %}
