--- a/sportsio/templates/user_side/user_profile.html
+++ b/sportsio/templates/user_side/user_profile.html
@@ -59,7 +59,7 @@
                             <a class="nav-link" id="account-detail-tab" data-toggle="tab" href="#account-detail" role="tab" aria-controls="account-detail" aria-selected="false">Reset Password</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="account-logout-tab" href="login-register.html" role="tab" aria-selected="false">Logout</a>
+                            <a class="nav-link" id="account-logout-tab" href="{% url "logout_view"%}" onclick="return confirm('Are you sure you want to Logout ?')" role="tab" aria-selected="false">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -93,10 +93,10 @@
                                                 <td>{{ item.estimated_delivery_time }}</td>
                                                 <td>{{ item.status }}</td>
                                                 <td>Rs. {{ item.total_price}}</td>
-                                                <td><a href="{% url 'user_profile:order_view' item.id %}" class="uren-btn uren-btn_dark uren-btn_sm"><span>View</span></a>
+                                                <td><a href="{% url 'user_profile:order_view' item.id %}" class="uren-btn uren-btn_dark uren-btn_sm" ><span>View</span></a>
                                                 </td>
                                                 <td >
-                                                    <a href="{% url 'user_profile:cancel_order' item.id %}"class="uren-btn uren-btn_dark uren-btn_sm"><span>Cancel</span>
+                                                    <a href="{% url 'user_profile:cancel_order' item.id %}" onclick="return confirm('Are you sure you want to Cancel this Order ?')" class="uren-btn uren-btn_dark uren-btn_sm"><span>Cancel</span>
                                                     </a>
                                                 </td>
                                             </tr>
@@ -117,7 +117,7 @@
                                         <div class="address-box">
                                             <label for="address{{ addy.id }}">{{ addy.address }},{{ addy.house_name }},{{ addy.street }},{{ addy.city }},{{ addy.zipcode }},{{ addy.state }}</label>
                                             <button class="btn btn-warning btn-sm"><a style="color:white;" href="{% url "user_profile:edit_address" addy.id %}">Edit</a> </button>
-                                            <button class="btn btn-danger btn-sm"><a style="color:white;" href="{% url 'user_profile:delete_address' addy.id %}">Delete</a> </button>
+                                            <button class="btn btn-danger btn-sm"><a style="color:white;" onclick="return confirm('Are you sure you want to Delete this Address ?')" href="{% url 'user_profile:delete_address' addy.id %}">Delete</a> </button>
 
                                         </div>
                                     {% endfor %}                                    
