--- a/sportsio/templates/user_side/base.html
+++ b/sportsio/templates/user_side/base.html
@@ -102,12 +102,15 @@
                                     <li class="minicart-wrap">
                                         <a href="{% url 'user_profile:cart_view' %}" class="minicart-btn ">
                                             <div class="minicart-count_area">
+                                                {% if user.is_authenticated %}
                                                 <span class="item-count">{{ cart_count }}</span>
+                                                {% endif%}
+                                                
                                                 <i class="ion-bag"></i>
                                             </div>
                                             <div class="minicart-front_text">
                                                 <span>Cart:</span>
-                                                <span class="total-price" style="font-weight:400; font-size:small">₹ {{ total_price }}</span>
+                                                
                                             </div>
                                         </a>
                                     </li>
@@ -208,7 +211,7 @@
                                             <ul class="hm-dropdown">
                                                 <li><a href="my-account.html">My Account</a></li>
                                                 <li><a href="login-register.html">Login | Register</a></li>
-                                                <li><a href="wishlist.html">Wishlist</a></li>
+                                                <li><a href="{% url 'user_profile:wishlist_view' %}">Wishlist</a></li>
                                                 <li><a href="{% url 'user_profile:cart_view'%}">Crt</a></li>
                                                 <li><a href="checkout.html">Checkout</a></li>
                                                 <li><a href="compare.html">Compare</a></li>
@@ -413,25 +416,7 @@
                                                         <li><a href="single-product-sticky-right.html">Sticky Right</a>
                                                         </li>
                                                     </ul>
-                                                </li>
-                                                <li><span class="megamenu-title">Single Product Type</span>
-                                                    <ul>
-                                                        <li><a href="single-product.html">Single Product</a></li>
-                                                        <li><a href="single-product-sale.html">Single Product Sale</a>
-                                                        </li>
-                                                        <li><a href="single-product-group.html">Single Product Group</a>
-                                                        </li>
-                                                        <li><a href="single-product-variable.html">Single Product
-                                                                Variable</a>
-                                                        </li>
-                                                        <li><a href="single-product-affiliate.html">Single Product
-                                                                Affiliate</a>
-                                                        </li>
-                                                        <li><a href="single-product-slider.html">Single Product
-                                                                Slider</a>
-                                                        </li>
-                                                    </ul>
-                                                </li>
+                                                
                                             </ul>
                                         </li>
                                         <li><a href="javascript:void(0)">Specials</a></li>
@@ -440,7 +425,7 @@
                                             <ul class="hm-dropdown">
                                                 <li><a href="my-account.html">My Account</a></li>
                                                 <li><a href="login-register.html">Login | Register</a></li>
-                                                <li><a href="wishlist.html">Wishlist</a></li>
+                                                <li><a href="{% url 'user_profile:wishlist_view' %}">Wishlist</a></li>
                                                 <li><a href="{% url 'user_profile:cart_view'%}">Cart</a></li>
                                                 <li><a href="checkout.html">Checkout</a></li>
                                                 <li><a href="compare.html">Compare</a></li>
@@ -509,15 +494,17 @@
                                     </li>
                                     <li class="minicart-wrap">
                                         <a href="{% url 'user_profile:cart_view' %}" class="minicart-btn ">
-                                            <div class="minicart-count_area">
                                             
+                                            <div class="minicart-count_area">
+                                                {% if user.is_authenticated %}
                                                 <span class="item-count">{{ cart_count }}</span>
-                                              
+                                                {% endif%}
                                                 <i class="ion-bag"></i>
                                             </div>
+                                            
                                             <div class="minicart-front_text">
                                                 <span>Cart:</span>
-                                                <span class="total-price" style="font-weight:400; font-size:small">₹{{ total_price }}</span>
+                                               
                                             </div>
                                         </a>
                                     </li>
