--- a/sportsio/templates/user_side/product_list.html
+++ b/sportsio/templates/user_side/product_list.html
@@ -67,7 +67,7 @@
                                             <div class="add-actions">
                                                 <ul>
                                                     <li><a class="uren-add_cart" href="cart.html" data-toggle="tooltip" data-placement="top" title="Add To Cart"><i class="ion-bag"></i></a></li>
-                                                    <li><a class="uren-wishlist" href="wishlist.html" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="ion-android-favorite-outline"></i></a></li>
+                                                    <li><a class="uren-wishlist" href="{% url 'user_profile:wishlist'%}" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"><i class="ion-android-favorite-outline"></i></a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -82,7 +82,7 @@
                                                         <li class="silver-color"><i class="ion-android-star"></i></li>
                                                     </ul>
                                                 </div>
-                                                <h6><a class="product-name" href="single-product.html">{{ prod.title }}</a></h6>
+                                                <h6><a class="product-name" href="single-product.html">{{ prod.title| truncatewords:3 }}</a></h6>
                                                 <div class="price-box">
                                                     {% if prod.offer_price > 0 %}
                                                     <span class="old-price">Rs{{ prod.price }}</span>
